# CodeVkEngine

./: CMakeLists.txt  LICENSE  README.md  Simple.json  imgui.ini
dependencies/CodeCudaEngine/include/: CodeCuda.cuh  CodeInclude.h  CodeStructs.cuh
dependencies/CodeCudaEngine/lib/cmake/CodeCudaEngine/: CodeCudaEngineConfig.cmake  CodeCudaEngineTargets-debug.cmake  CodeCudaEngineTargets.cmake
dependencies/LegitProfiler/: ImGuiProfilerRenderer.h  ProfilerTask.h
dependencies/Slang/cmake/: slangTargets-release.cmake  slangTargets.cmake
dependencies/happly-master/: happly.h
src/: Simple.json  main.cpp
src/Engine/: Buffer.hpp  Core.hpp  CoreImpl.hpp  DescriptorCache.hpp  DynamicRenderPass.hpp  EngineInclude.hpp  Enums.hpp  Image.hpp  ImageShipper.hpp  ImageView.hpp  Pipeline.hpp  PresentQueue.hpp  Profiler.hpp  RenderGraph.hpp  ResourcesManager.hpp  ShaderParser.hpp  Structs.hpp  SyncronizationPatterns.hpp  UtilVk.hpp  VertexInput.hpp
src/Rendering/: BaseRenderer.hpp  ImguiRenderer.hpp  RendererStructs.hpp  RenderingInclude.hpp
src/Rendering/Examples/: ComputeRenderer.hpp  ForwardRenderer.hpp
src/Rendering/RThings/: Animator.hpp  Camera.hpp  Lights.hpp  Material.hpp  Model.hpp  RenderingResManager.hpp
src/Rendering/Renderers/: ClusterRenderer.hpp  DebugRenderer.hpp  FlatRenderer.hpp  GIRenderer.hpp  GSRenderer.hpp  HairRenderer.hpp  TemplateRenderer.hpp
src/Shaders/: compile.bat
src/Shaders/glsl/ClusterRendering/: gBuffer.frag  gBuffer.vert  light.frag
src/Shaders/glsl/Common/: Quad.vert
src/Shaders/glsl/Compute/: paintingGen.comp
src/Shaders/glsl/Examples/: cSample.comp
src/Shaders/glsl/FlatRendering/: cascadesResult.frag  rCascadesOutput.frag
src/Shaders/glsl/Utils/: uMath.glsl  uPBR.glsl  uRendering.glsl  uShading.glsl  uStructs.glsl
src/Shaders/glsl/templates/: rTarget.frag  tComp.comp  tFrag.frag  tGeom.geom  tTesc.tesc  tVert.vert
src/Shaders/slang/templates/: compute.slang  quad.slang
src/Shaders/slang/test/: cudaBufferToImage.slang  paintingGen.slang  shView.slang
src/Shaders/spirv/Compute/: lightCulling.comp.spv  paintingGen.comp.spv
src/Shaders/spirv/FlatRendering/: cascadeGen.frag.spv  cascadesMerge.frag.spv  paintingGen.frag.spv  rCascadesOutput.frag.spv
src/Shaders/spirvGlsl/ClusterRendering/: gBuffer.frag.spv  gBuffer.vert.spv  light.frag.spv
src/Shaders/spirvGlsl/Common/: meshCull.comp.spv
src/Shaders/spirvGlsl/Compute/: lightCulling.comp.spv  meshCull.comp.spv  paintingGen.comp.spv
src/Shaders/spirvGlsl/DebugRendering/: debug.frag.spv  debug.vert.spv
src/Shaders/spirvGlsl/FlatRendering/: cascadeGen.frag.spv  cascadesBilinearInterp.frag.spv  cascadesMerge.frag.spv  cascadesResult.frag.spv  rCascadesOutput.frag.spv
src/Systems/: FileWatcher.hpp  FilesManager.hpp  InputSystem.hpp  Logger.hpp  Memory.hpp  OS.hpp  ObserverSystem.hpp  SerializeSystem.hpp  SingletonStorage.hpp  SystemsInclude.hpp  TaskThreat.hpp
src/UI/: GraphNode.hpp  GraphNodeImpl.hpp  GraphNodeResManager.hpp  GraphNodeResManagerImpl.hpp  RG_NodeEditor.hpp  UI_Include.hpp  Widgets.hpp
src/Utility/: Math.hpp  UtilityInclude.hpp
src/WindowAPI/: WindowProvider.hpp
